--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to My Personal Page!</h1>
+        <h1>Welcome to Jacob' website!</h1>
     </header>
     <main>
-        <p>This is a simple introduction to my personal website hosted on GitHub Pages.</p>
+        <p> This is for ECE461L</p>
     </main>
     <footer>
-        <p>Created by Jacob</p>
+        <p>Created by Jacob Jang</p>
     </footer>
 </body>
 </html>
